--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^8.3.4",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.3.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
     "typescript": "^4.4.2",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
